infrastructure/kubernetes/apps/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: mrun-apps
spec:
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
