infrastructure/kubernetes/apps/api-gateway/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: users-service

spec:
  podSelector:
    matchLabels:
      app: users-service

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}

  egress:
    - {}
